# skua

./: .gitignore  README.md  build-deb.sh  cdev  entrypoint.sh  install.sh  pyproject.toml  requirements.txt  skua
.skua/: .bash_history
docs/: cli.md  configuration.md  monitoring.md  notes.md  quickstart.md  security.md
docs/planning/: plan.md  plan_comparison.md
packaging/: build-deb.sh
skua/: __init__.py  __main__.py  cli.py  docker.py  project_adapt.py  project_lock.py  project_prep.py  tasks.py  usage.py  utils.py
skua/commands/: __init__.py  adapt.py  add.py  agent_cmd.py  build.py  clean.py  config_cmd.py  credential.py  dashboard.py  default_image.py  describe.py  init.py  list_cmd.py  merge.py  prep.py  purge.py  remove.py  restart.py  run.py  source_cmd.py  ssh_cmd.py  stop.py  task.py  update.py  validate_cmd.py
skua/config/: __init__.py  loader.py  resources.py  validation.py
skua/container/: entrypoint.sh
skua/container/.build-context-_6yfpinb/: Dockerfile  check_monitoring.sh  entrypoint.sh  tmux-attach-banner.sh
skua/container/.build-context-qz7wv9fo/: Dockerfile
skua/container/.entrypoint.d/: claude.sh  codex.sh
skua/container/entrypoint.d/: claude.sh  codex.sh
skua/scripts/: install_docker_cli.sh
tests/: test_adapt.py  test_adapt_integration.py  test_add_and_list.py  test_agent_cmd.py  test_agent_version_lookup.py  test_dashboard.py  test_pi_agent.py  test_prep.py  test_project_lock.py  test_purge.py  test_remove.py  test_repo.py  test_restart.py  test_run_remote_ssh.py  test_ssh.py  test_stop.py  test_task.py  test_usage.py
(+20 files in other folders)
